--- a/main.html
+++ b/main.html
@@ -20,15 +20,55 @@
             <span class="logo_name">company</span>
           </div>
           <div class="media-icons">
-            <!-- your code here -->
-          </div>
+  <a href="#"><i class="fa fa-facebook"></i></a>
+  <a href="#"><i class="fa fa-twitter"></i></a>
+  <a href="#"><i class="fa fa-instagram"></i></a>
+  <a href="#"><i class="fa fa-linkedin"></i></a>
+  <a href="#"><i class="fa fa-youtube"></i></a>
+</div>
+
         </div>
         <div class="link-boxes">
-          <!-- your code here -->
+          <div>
+			  <p>Links</p>
+			  <ul>
+				  <li>Home</li>
+				  <li>Contact</li>
+				  <li>About Us</li>
+				  <li>Get Started</li>
+			  </ul>
+		  </div>
+			<div>
+			  <p>Services</p>
+			  <ul>
+				  <li>App Design</li>
+				  <li>Web Design</li>
+				  <li>Logo Design</li>
+				  <li>Banner Design</li>
+			  </ul>
+		  </div>
+			<div>
+			  <p>Other Services</p>
+			  <ul>
+				  <li>SEO</li>
+				  <li>Contact Marketing</li>
+				  <li>Prints</li>
+				  <li>Social Media</li>
+			  </ul>
+		  </div>
+			<div>
+			  <p>Contact</p>
+			  <ul>
+				  <li>+91 8879887262</li>
+				  <li>+91 8879887262</li>
+				  <li>contact@company.com</li>
+			  </ul>
+		  </div>
         </div>
       </div>
       <div class="bottom-details">
-        <!-- your code here -->
+        <div>Copyright &copyright 2021 company.</div>
+		  <div>Privacy policy</div>
       </div>
     </footer>
   </body>
